Update JsonFileType